Update width of 3D canvas to prevent appearing horizontal scrollbar.

--- a/src/sections/RareBeef.module.scss
+++ b/src/sections/RareBeef.module.scss
@@ -5,6 +5,7 @@
   display: block;
 }
 .content {
+  overflow: hidden;
   position: sticky;
   top: 0;
 }
@@ -40,7 +41,7 @@
 .canvas {
   pointer-events: none;
   height: 100vh !important;
-  width: calc(100vw - 15px) !important;
+  width: 100vw !important;
   margin: {
     bottom: -10vh;
   }
